feat: graph generation for transaction history as svg